--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width. initial-scale=1.0" />
     <title>Что-то на науку недели</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
@@ -102,7 +102,7 @@
               </td>
             </tr>
             <tr>
-              <td><span class="text">Напряжение, В</span></td>
+              <td><span class="text">Напряжение. В</span></td>
               <td>
                 <select name="voltage" id="voltage-onovnoy">
                   <option value="220" class="text">220</option>
@@ -180,7 +180,7 @@
               </td>
             </tr>
             <tr>
-              <td><span class="text">Напряжение, В</span></td>
+              <td><span class="text">Напряжение. В</span></td>
               <td>
                 <select name="voltage" id="voltage-reserv">
                   <option value="220" class="text">220</option>
@@ -260,7 +260,7 @@
             <tr>
               <td colspan="2">
                 <span class="text"
-                  >Переездная сигнализация, охраняемый переезд</span
+                  >Переездная сигнализация. охраняемый переезд</span
                 >
               </td>
               <td>
@@ -327,7 +327,7 @@
                   >Устройства гарантированного питания</span
                 >
               </td>
-              <td><span class="text">S, ВА</span></td>
+              <td><span class="text">S. ВА</span></td>
               <td>
                 <input
                   type="number"
@@ -413,15 +413,15 @@
           </p>
           <table class="garant-and-negarant-load__table">
             <tr>
-              <td><span class="text">Наименование нагрузки, цепь</span></td>
+              <td><span class="text">Наименование нагрузки. цепь</span></td>
               <td class="center">
-                <span class="text">Потребляемая мощность S, кВа</span>
+                <span class="text">Потребляемая мощность S. кВа</span>
               </td>
             </tr>
             <tr>
               <td colspan="2">
                 <span class="text"
-                  >Гарантированные нагрузки, напряжение 220 В</span
+                  >Гарантированные нагрузки. напряжение 220 В</span
                 >
               </td>
             </tr>
@@ -461,7 +461,7 @@
               </td>
             </tr>
             <tr>
-              <td><span class="text">Прогрев ДГА, ЗУ</span></td>
+              <td><span class="text">Прогрев ДГА. ЗУ</span></td>
               <td>
                 <input
                   class="text"
@@ -474,7 +474,7 @@
             <tr>
               <td colspan="2">
                 <span class="text"
-                  >Негарантированные нагрузки, напряжение 220 В</span
+                  >Негарантированные нагрузки. напряжение 220 В</span
                 >
               </td>
             </tr>
@@ -519,24 +519,26 @@
             <td rowspan="2"><span>Примечание</span></td>
           </tr>
           <tr>
-            <td><span>P, Вт</span></td>
-            <td><span>Q, ВАр</span></td>
-            <td><span>S, ВА</span></td>
-            <td><span>P, Вт</span></td>
-            <td><span>Q, ВАр</span></td>
-            <td><span>S, ВА</span></td>
+            <td><span>P. Вт</span></td>
+            <td><span>Q. ВАр</span></td>
+            <td><span>S. ВА</span></td>
+            <td><span>P. Вт</span></td>
+            <td><span>Q. ВАр</span></td>
+            <td><span>S. ВА</span></td>
           </tr>
           <tr>
             <td><span class="bold">1.</span></td>
-            <td colspan="11"><span class="bold">Сигналы</span></td>
+            <td colspan="11" class="left">
+              <span class="bold">Сигналы</span>
+            </td>
           </tr>
           <tr>
             <td><span>1.1</span></td>
             <td class="left"><span>Светофоры входные</span></td>
             <td><span>лампа</span></td>
-            <td><span>31,0</span></td>
-            <td><span>11,3</span></td>
-            <td><span>33,0</span></td>
+            <td><span>31.0</span></td>
+            <td><span>11.3</span></td>
+            <td><span>33.0</span></td>
             <td><span id="startEntranceSignal"></span></td>
             <td><span id="resultEntranceSignalP"></span></td>
             <td><span id="resultEntranceSignalQ"></span></td>
@@ -549,9 +551,9 @@
             <td><span>1.2</span></td>
             <td class="left"><span>Светофоры выходные и маневровые</span></td>
             <td><span>лампа</span></td>
-            <td><span>21,0</span></td>
-            <td><span>6,8</span></td>
-            <td><span>22,0</span></td>
+            <td><span>21.0</span></td>
+            <td><span>6.8</span></td>
+            <td><span>22.0</span></td>
             <td><span id="startDepart-manSignal"></span></td>
             <td><span id="resultDepart-manSignalP"></span></td>
             <td><span id="resultDepart-manSignalQ"></span></td>
@@ -580,13 +582,13 @@
             <td class="left"><span>РШ входных светофоров</span></td>
             <td><span>РТА1 обогр. освещ.</span></td>
             <td>
-              <span>228,0<br />30,0<br />115,0</span>
+              <span>228.0<br />30.0<br />115.0</span>
             </td>
             <td>
-              <span>46,2<br />8,8<br />-</span>
+              <span>46.2<br />8.8<br />-</span>
             </td>
             <td>
-              <span>232,6<br />31,3<br />115,0</span>
+              <span>232.6<br />31.3<br />115.0</span>
             </td>
             <td><span class="startRSH"></span></td>
             <td><span class="resultRSHP"></span></td>
@@ -622,9 +624,9 @@
               <span>Местные элементы РЦ 25Гц (релейный конец)</span>
             </td>
             <td><span>путь</span></td>
-            <td><span>2,44</span></td>
-            <td><span>7,5</span></td>
-            <td><span>7,9</span></td>
+            <td><span>2.44</span></td>
+            <td><span>7.5</span></td>
+            <td><span>7.9</span></td>
             <td><span id="startLocalElement"></span></td>
             <td><span id="localElementTotalP"></span></td>
             <td><span id="localElementTotalQ"></span></td>
@@ -642,9 +644,9 @@
               ></span>
             </td>
             <td><span>путь</span></td>
-            <td><span>31,5</span></td>
-            <td><span>14,8</span></td>
-            <td><span>34,8</span></td>
+            <td><span>31.5</span></td>
+            <td><span>14.8</span></td>
+            <td><span>34.8</span></td>
             <td><span id="startTaga"></span></td>
             <td><span id="tagaTotalP"></span></td>
             <td><span id="tagaTotalQ"></span></td>
@@ -713,7 +715,7 @@
           <tr>
             <td><span>3.1</span></td>
             <td class="left">
-              <span>АЛСН (пути), при L=1000м</span>
+              <span>АЛСН (пути). при L=1000м</span>
             </td>
             <td><span>путь</span></td>
             <td><span>15</span></td>
@@ -732,7 +734,7 @@
           <tr>
             <td><span>3.2</span></td>
             <td class="left">
-              <span>АЛСН (маршруты), при L=300м</span>
+              <span>АЛСН (маршруты). при L=300м</span>
             </td>
             <td><span>секция</span></td>
             <td><span>7</span></td>
@@ -748,15 +750,15 @@
           </tr>
           <tr>
             <td><span>3.3</span></td>
-            <td class="left"><span>Питание ТШ, КПТШ</span></td>
+            <td class="left"><span>Питание ТШ. КПТШ</span></td>
             <td><span>станция</span></td>
-            <td><span>88,0</span></td>
-            <td><span>66,0</span></td>
-            <td><span>110,0</span></td>
+            <td><span>88.0</span></td>
+            <td><span>66.0</span></td>
+            <td><span>110.0</span></td>
             <td><span>1</span></td>
-            <td><span>88,0</span></td>
-            <td><span>66,0</span></td>
-            <td><span>110,0</span></td>
+            <td><span>88.0</span></td>
+            <td><span>66.0</span></td>
+            <td><span>110.0</span></td>
             <!-- Пустые -->
             <td></td>
             <td>
@@ -767,9 +769,9 @@
             <td><span>3.4</span></td>
             <td class="left"><span>Дешифр. ячейки</span></td>
             <td><span>подход</span></td>
-            <td><span>16,6</span></td>
-            <td><span>16,8</span></td>
-            <td><span>23,6</span></td>
+            <td><span>16.6</span></td>
+            <td><span>16.8</span></td>
+            <td><span>23.6</span></td>
             <td><span class="numberApproaches"></span></td>
             <td><span id="decryptingDeviceP"></span></td>
             <td><span id="decryptingDeviceQ"></span></td>
@@ -784,7 +786,7 @@
             <td><span>подход</span></td>
             <td><span>22</span></td>
             <td><span>76</span></td>
-            <td><span>79,1</span></td>
+            <td><span>79.1</span></td>
             <td><span class="numberApproaches"></span></td>
             <td><span id="coddingTransformerP"></span></td>
             <td><span id="coddingTransformerQ"></span></td>
@@ -833,9 +835,9 @@
             <td><span>4.2</span></td>
             <td class="left"><span>Контрольные цепи стрелок и УТС</span></td>
             <td><span>комплект.</span></td>
-            <td><span>7,7</span></td>
-            <td><span>5,3</span></td>
-            <td><span>9,3</span></td>
+            <td><span>7.7</span></td>
+            <td><span>5.3</span></td>
+            <td><span>9.3</span></td>
             <td><span id="numberDeviceConrtol"></span></td>
             <td><span id="controlCircutsAndUTSTotalP"></span></td>
             <td><span id="controlCircutsAndUTSTotalQ"></span></td>
@@ -867,11 +869,11 @@
           </tr>
           <tr>
             <td><span>5.1</span></td>
-            <td class="left"><span>Реле П-М (0,34 А х 28 В)</span></td>
+            <td class="left"><span>Реле П-М (0.34 А х 28 В)</span></td>
             <td><span>стр.</span></td>
-            <td><span>7,7</span></td>
+            <td><span>7.7</span></td>
             <td><span>-</span></td>
-            <td><span>7,7</span></td>
+            <td><span>7.7</span></td>
             <td><span class="numberOfLines"></span></td>
             <td><span class="relePM"></span></td>
             <td><span>-</span></td>
@@ -883,9 +885,9 @@
             <td><span>5.2</span></td>
             <td class="left"><span>КТС УК</span></td>
             <td><span>комплект</span></td>
-            <td><span>150,0</span></td>
+            <td><span>150.0</span></td>
             <td><span>-</span></td>
-            <td><span>150,0</span></td>
+            <td><span>150.0</span></td>
             <td><span class="numberKTS-UK"></span></td>
             <td><span class="KTS-UKPS"></span></td>
             <td><span>-</span></td>
@@ -897,9 +899,9 @@
             <td><span>5.3</span></td>
             <td class="left"><span>ДЦ «СЕТУНЬ»</span></td>
             <td><span>комплект</span></td>
-            <td><span>96,0</span></td>
+            <td><span>96.0</span></td>
             <td><span>-</span></td>
-            <td><span>96,0</span></td>
+            <td><span>96.0</span></td>
             <td><span>1</span></td>
             <td><span class="setynPS"></span></td>
             <td><span>-</span></td>
@@ -931,13 +933,13 @@
             <td><span>6.1</span></td>
             <td class="left"><span>Внепостовые цепи ЛП-ЛМ</span></td>
             <td><span>станция</span></td>
-            <td><span>72,0</span></td>
+            <td><span>72.0</span></td>
             <td><span>-</span></td>
-            <td><span>72,0</span></td>
+            <td><span>72.0</span></td>
             <td><span>1</span></td>
-            <td><span>72,0</span></td>
+            <td><span>72.0</span></td>
             <td><span>-</span></td>
-            <td><span>72,0</span></td>
+            <td><span>72.0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -945,9 +947,9 @@
             <td><span>6.2</span></td>
             <td class="left"><span>Ограждение составов</span></td>
             <td><span>путь</span></td>
-            <td><span>2,16</span></td>
+            <td><span>2.16</span></td>
             <td><span>-</span></td>
-            <td><span>2,16</span></td>
+            <td><span>2.16</span></td>
             <td><span class="numberApproaches"></span></td>
             <td><span class="fencesTrainPS"></span></td>
             <td><span>-</span></td>
@@ -982,13 +984,13 @@
               <span>РТА1<br />обогр.<br />освещ.</span>
             </td>
             <td>
-              <span>228,0<br />30,0<br />115,5</span>
+              <span>228.0<br />30.0<br />115.5</span>
             </td>
             <td>
-              <span>46,2<br />8,8<br />-</span>
+              <span>46.2<br />8.8<br />-</span>
             </td>
             <td>
-              <span>232,6<br />31,3<br />115,0</span>
+              <span>232.6<br />31.3<br />115.0</span>
             </td>
             <td><span class="startRSH"></span></td>
             <td><span class="resultRSHP"></span></td>
@@ -1003,7 +1005,7 @@
               <span>Потери в трансформаторах (10% при 80% загрузки)</span>
             </td>
             <td><span>тр-р</span></td>
-            <td><span>&eta;=0,95</span></td>
+            <td><span>&eta;=0.95</span></td>
             <td></td>
             <td></td>
             <td></td>
@@ -1037,13 +1039,13 @@
             <td><span>8.1</span></td>
             <td class="left"><span>Постовые 220 В</span></td>
             <td><span>комплект</span></td>
-            <td><span>850,0</span></td>
-            <td><span>637,5</span></td>
-            <td><span>1062,5</span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
+            <td><span>850.0</span></td>
+            <td><span>637.5</span></td>
+            <td><span>1062.5</span></td>
+            <td><span>1</span></td>
+            <td><span>850.0</span></td>
+            <td><span>637.5</span></td>
+            <td><span>1062.5</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1051,13 +1053,13 @@
             <td><span>8.2</span></td>
             <td class="left"><span>АРМ ДСП</span></td>
             <td><span>комплект</span></td>
-            <td><span>320,0</span></td>
-            <td><span>240,0</span></td>
-            <td><span>400,0</span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
+            <td><span>320.0</span></td>
+            <td><span>240.0</span></td>
+            <td><span>400.0</span></td>
+            <td><span>1</span></td>
+            <td><span>320.0</span></td>
+            <td><span>240.0</span></td>
+            <td><span>400.0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1065,27 +1067,27 @@
             <td><span>8.2</span></td>
             <td class="left"><span>АРМ ШН</span></td>
             <td><span>комплект</span></td>
-            <td><span>320,0 </span></td>
-            <td><span>240,0</span></td>
-            <td><span>400,0</span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
+            <td><span>320.0 </span></td>
+            <td><span>240.0</span></td>
+            <td><span>400.0</span></td>
+            <td><span>1</span></td>
+            <td><span>320.0 </span></td>
+            <td><span>240.0</span></td>
+            <td><span>400.0</span></td>
+            <td></td>
             <td></td>
           </tr>
           <tr>
             <td><span>8.2</span></td>
             <td class="left"><span>АДК-ДК</span></td>
             <td><span>комплект</span></td>
-            <td><span>800,0</span></td>
-            <td><span>600,0</span></td>
-            <td><span>1000,0</span></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span>800.0</span></td>
+            <td><span>600.0</span></td>
+            <td><span>1000.0</span></td>
+            <td><span>1</span></td>
+            <td><span>800.0</span></td>
+            <td><span>600.0</span></td>
+            <td><span>1000.0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1124,7 +1126,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td><span>A, B, C</span></td>
+            <td><span>A. B. C</span></td>
             <td><span>Расчёт по формуле (29)</span></td>
           </tr>
           <tr>
@@ -1135,7 +1137,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td><span>A, B, C</span></td>
+            <td><span>A. B. C</span></td>
             <td></td>
           </tr>
           <tr>
