--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width. initial-scale=1.0" />
     <title>Что-то на науку недели</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <div class="container-header">
+        <img src="./img/logo3.png" alt="logo" class="header_logo">
+        <p class="header_title">Расчёт электропитяющей установки поста ЭЦ крупной станции</p>
+      </div>
+    </header>
 
     <!-- Тело сайта -->
     <main class="main" id="main">
