--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
+            <td><span>Итого</span></td>
             <td><span id="totalPowerP"></span></td>
             <td><span id="totalPowerQ"></span></td>
             <td><span id="totalPowerS"></span></td>
@@ -753,9 +753,9 @@
             <td><span>12</span></td>
             <td><span>19</span></td>
             <td><span class="numberOfLines"></span></td>
-            <td><span id="alsnLinesP"></span></td>
-            <td><span id="alsnLinesQ"></span></td>
-            <td><span id="alsnLinesS"></span></td>
+            <td><span id="alsnLinesP" class="powerWithoutDriveP"></span></td>
+            <td><span id="alsnLinesQ" class="powerWithoutDriveQ"></span></td>
+            <td><span id="alsnLinesS" class="powerWithoutDriveS"></span></td>
             <!-- Пустые -->
             <td></td>
             <td>
@@ -772,9 +772,9 @@
             <td><span>11</span></td>
             <td><span>13</span></td>
             <td><span class="numberApproaches"></span></td>
-            <td><span id="alsnRouteP"></span></td>
-            <td><span id="alsnRouteQ"></span></td>
-            <td><span id="alsnRouteS"></span></td>
+            <td><span id="alsnRouteP" class="powerWithoutDriveP"></span></td>
+            <td><span id="alsnRouteQ" class="powerWithoutDriveQ"></span></td>
+            <td><span id="alsnRouteS" class="powerWithoutDriveS"></span></td>
             <!-- Пустые -->
             <td></td>
             <td></td>
@@ -804,9 +804,9 @@
             <td><span>16.8</span></td>
             <td><span>23.6</span></td>
             <td><span class="numberApproaches"></span></td>
-            <td><span id="decryptingDeviceP"></span></td>
-            <td><span id="decryptingDeviceQ"></span></td>
-            <td><span id="decryptingDeviceS"></span></td>
+            <td><span id="decryptingDeviceP" class="powerWithoutDriveP"></span></td>
+            <td><span id="decryptingDeviceQ" class="powerWithoutDriveQ"></span></td>
+            <td><span id="decryptingDeviceS" class="powerWithoutDriveS"></span></td>
             <!-- Пустые -->
             <td></td>
             <td></td>
@@ -819,9 +819,9 @@
             <td><span>76</span></td>
             <td><span>79.1</span></td>
             <td><span class="numberApproaches"></span></td>
-            <td><span id="coddingTransformerP"></span></td>
-            <td><span id="coddingTransformerQ"></span></td>
-            <td><span id="coddingTransformerS"></span></td>
+            <td><span id="coddingTransformerP" class="powerWithoutDriveP"></span></td>
+            <td><span id="coddingTransformerQ" class="powerWithoutDriveQ"></span></td>
+            <td><span id="coddingTransformerS" class="powerWithoutDriveS"></span></td>
             <!-- Пустые -->
             <td></td>
             <td></td>
@@ -873,10 +873,10 @@
             <td><span>9.3</span></td>
             <td><span id="numberDeviceConrtol"></span></td>
             <td>
-              <span id="controlCircutsAndUTSTotalP"></span>
+              <span id="controlCircutsAndUTSTotalP" class="powerWithoutDriveP"></span>
             </td>
-            <td><span id="controlCircutsAndUTSTotalQ"></span></td>
-            <td><span id="controlCircutsAndUTSTotalS"></span></td>
+            <td><span id="controlCircutsAndUTSTotalQ" class="powerWithoutDriveQ"></span></td>
+            <td><span id="controlCircutsAndUTSTotalS" class="powerWithoutDriveS"></span></td>
             <!-- Пустые -->
             <td></td>
             <td></td>
@@ -910,9 +910,9 @@
             <td><span>-</span></td>
             <td><span>7.7</span></td>
             <td><span class="numberOfLines"></span></td>
-            <td><span class="relePM"></span></td>
+            <td><span class="relePM powerWithoutDriveP"></span></td>
             <td><span>-</span></td>
-            <td><span class="relePM"></span></td>
+            <td><span class="relePM powerWithoutDriveS"></span></td>
             <td></td>
             <td><span>РПЦ систем</span></td>
           </tr>
@@ -924,9 +924,9 @@
             <td><span>-</span></td>
             <td><span>150.0</span></td>
             <td><span class="numberKTS-UK"></span></td>
-            <td><span class="KTS-UKPS"></span></td>
+            <td><span class="KTS-UKPS powerWithoutDriveP"></span></td>
             <td><span>-</span></td>
-            <td><span class="KTS-UKPS"></span></td>
+            <td><span class="KTS-UKPS powerWithoutDriveS"></span></td>
             <td></td>
             <td></td>
           </tr>
@@ -938,9 +938,9 @@
             <td><span>-</span></td>
             <td><span>96.0</span></td>
             <td><span>1</span></td>
-            <td><span class="setynPS"></span></td>
+            <td><span class="setynPS powerWithoutDriveP"></span></td>
             <td><span>-</span></td>
-            <td><span class="setynPS"></span></td>
+            <td><span class="setynPS powerWithoutDriveS"></span></td>
             <td></td>
             <td></td>
           </tr>
@@ -972,9 +972,9 @@
             <td><span>-</span></td>
             <td><span>72.0</span></td>
             <td><span>1</span></td>
-            <td><span>72.0</span></td>
+            <td><span class="powerWithoutDriveP">72.0</span></td>
             <td><span>-</span></td>
-            <td><span>72.0</span></td>
+            <td><span class="powerWithoutDriveS">72.0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -986,9 +986,9 @@
             <td><span>-</span></td>
             <td><span>2.16</span></td>
             <td><span class="numberApproaches"></span></td>
-            <td><span class="fencesTrainPS"></span></td>
+            <td><span class="fencesTrainPS powerWithoutDriveP"></span></td>
             <td><span>-</span></td>
-            <td><span class="fencesTrainPS"></span></td>
+            <td><span class="fencesTrainPS powerWithoutDriveS"></span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1078,9 +1078,9 @@
             <td><span>637.5</span></td>
             <td><span>1062.5</span></td>
             <td><span>1</span></td>
-            <td><span>850.0</span></td>
-            <td><span>637.5</span></td>
-            <td><span>1062.5</span></td>
+            <td><span class="powerWithoutDriveP">850.0</span></td>
+            <td><span class="powerWithoutDriveQ">637.5</span></td>
+            <td><span class="powerWithoutDriveS">1062.5</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1092,9 +1092,9 @@
             <td><span>240.0</span></td>
             <td><span>400.0</span></td>
             <td><span>2</span></td>
-            <td><span>640.0</span></td>
-            <td><span>480.0</span></td>
-            <td><span>800.0</span></td>
+            <td><span class="powerWithoutDriveP">640.0</span></td>
+            <td><span class="powerWithoutDriveQ">480.0</span></td>
+            <td><span class="powerWithoutDriveS">800.0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1106,9 +1106,9 @@
             <td><span>240.0</span></td>
             <td><span>400.0</span></td>
             <td><span>1</span></td>
-            <td><span>320.0 </span></td>
-            <td><span>240.0</span></td>
-            <td><span>400.0</span></td>
+            <td><span class="powerWithoutDriveP">320.0 </span></td>
+            <td><span class="powerWithoutDriveQ">240.0</span></td>
+            <td><span class="powerWithoutDriveS">400.0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1120,9 +1120,9 @@
             <td><span>600.0</span></td>
             <td><span>1000.0</span></td>
             <td><span>1</span></td>
-            <td><span>800.0</span></td>
-            <td><span>600.0</span></td>
-            <td><span>1000.0</span></td>
+            <td><span class="powerWithoutDriveP">800.0</span></td>
+            <td><span class="powerWithoutDriveQ">600.0</span></td>
+            <td><span class="powerWithoutDriveS">1000.0</span></td>
             <td></td>
             <td></td>
           </tr>
@@ -1145,9 +1145,9 @@
             <td colspan="6" class="left">
               <span>ВСЕГО НАГРУЗКА ЖАТ БЕЗ ПЕРЕВОДА СТРЕЛОК (без п.4.1)</span>
             </td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span id="fieldPowerWithoutDriveP"></span></td>
+            <td><span id="fieldPowerWithoutDriveQ"></span></td>
+            <td><span id="fieldPowerWithoutDriveS"></span></td>
             <td>
               <span>A<br />B<br />C</span>
             </td>
@@ -1180,9 +1180,9 @@
             <td colspan="6" class="left">
               <span>СУММАРНАЯ АКТИВНАЯ МОЩНОСТЬ УБП (Р<sub>Н</sub>)</span>
             </td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span class="sumActivePower"></span></td>
+            <td><span>-</span></td>
+            <td><span class="sumActivePower"></span></td>
             <td></td>
             <td></td>
           </tr>
